--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 	<header>
 		<div class="top">
-			<a href="#" target="_blank">Главная</a>
-			<a href="#" target="_blank">Резюме</a>
-			<a href="#" target="_blank">Шахматы</a>
+			<a href="index.html" target="_blank">Главная</a>
+			<a href="rezume.html" target="_blank">Резюме</a>
+			<a href="chessboard.html" target="_blank">Шахматы</a>
 			<a href="#" target="_blank">Календарь</a>
-			<a href="#" target="_blank">Генератор паролей</a>
+			<a href="generationPass.html" target="_blank">Генератор паролей</a>
 		</div>
 	</header>
 	<main>
@@ -33,9 +33,9 @@
 				<p>
 				<h2>Контактная информация</h2>
 				<p>		
-					&#128384 +7(926) 620 73 90</br>
+					&#128384 +7(926) 620 73 90</br><!-- разобраться с активной ссылкой на телефон-->
 					&#128221 г.Москва</br>
-					<a href="mailto:k.n.gunya@yandex.ru">&#128231 Email</a>
+					<a href="mailto:k.n.gunya@yandex.ru">&#128231 E-mail</a>
 				</p>
 			</div>
 		</div>
