--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<a href="chessboard.html" target="_blank">Шахматы</a>
 			<a href="#" target="_blank">Календарь</a>
 			<a href="generationPass.html" target="_blank">Генератор паролей</a>
+			<a href="zagadki.html" target="_blank">Загадки</a>
 		</div>
 	</header>
 	<main>
