--- a/rezume.html
+++ b/rezume.html
@@ -10,6 +10,7 @@ body {
 	font-family: Arial, sans-serif;
 	padding: 20px; 
 	border: 3px solid #fff;
+	background-color: #ebebfb;
 	box-sizing: border-box;
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 	width: 900px;
@@ -31,15 +32,23 @@ h2 {
 .contact {
 	text-align: flex-start;
 }
-.name {
-	background: blue;
-	border: 1px solid blue;
+.column {
+	display: flex;
+	justify-content: space-evenly;
+}
+.col1 {
+	background: #d8d8f5;
+	border: 1px solid #d8d8f5;
 	box-sizing: border-box;
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
-	width: 100px;
+	width: 100%;
 	min-height: 100%;
 	align-items: flex-start;
-	
+}
+.col2 {
+	text-align: left;
+	padding-left: 8px;
+
 }
 </style>
 </head>
@@ -58,6 +67,72 @@ h2 {
 			<img src="images/Glavnaya.jpg">
 		</div>
 	</div>
-	
+		<div class="column">
+			<div class="col1">
+				<h3>Образование:</br></br></h3>
+				<h3>Специальность:</br></br></h3>
+				<h3>Опыт работы:</br>01.09.2011 - 26.08.2020</br></br></br></br></br></br></br></br></br></br></br></h3>
+				<h3>Дополнительная информация:</br></br></br></br></br></br></br></br></br></br></br></h3>
+				<h3>Рекомендации с предыдущего места работы:</br></br></br></br></br></br></h3>
+				<h3>Желаемый уровень оплаты труда:</h3>
+			</div>
+			<div class="col2">
+				<p>Высшее (очное) 2005-2010г.г. "Ставропольский государственный аграрный университет"</br></br></p>
+				<p>Инженер-энергетик</br></br></p>
+				<p>ОАО «АТС» г.Москва</br>Должность: специалист</br>Должностные обязанности:</p>
+					<ul>
+						<li>Распределение задач на выполнение технических работ
+							специалистам, исходя из их загруженности и
+							профессиональной деятельности
+						</li>
+						<li>
+							проверка качества выполненных специалистами работ
+						</li>
+						<li>
+							консультирвание контрагентов по вопросам почтового
+							программного обеспечения, работы сайта
+						</li>
+						<li>
+							разбор ежедневных обращений и решение поставленных задач
+						</li>
+						<li>
+							оперативное решение инцидентов</br></br></br></br>
+						</li>
+					</ul>
+				</p>
+				<p>
+					Профессиональные навыки
+				</p>
+				<p>
+					<ul>
+						<li>
+							HTML
+						</li>
+						<li>
+							CSS
+						</li>
+						<li>
+							JavaScript
+						</li>
+						<li>
+							GIT, GITHub 
+						</li>
+						<li>
+							Ajax, jQuery
+						</li>
+						<li>
+							Microsoft Office, Libre Office, Jira, Mantis, почтовые программы</br></br></br></br></br>
+						</li>
+					</ul>
+				</p>
+				<p>
+					ОАО «АТС»</br>
+					Начальник отдела программного обеспечения и информационных технологий:</br>
+					Калагов Александр Валерьевич</br>
+					+74959670525 (доб.1279),</br> +79166093327</br></br></br></br>
+				</p>
+				<p>60000 рублей</p>
+			</div>
+		</div>
 </body>
 </html>
